# prim_2017

./: CMakeLists.txt  teera_lab2_homework.cpp  teera_lab3_homework.cpp  teera_lab4_homework.cpp
